# ChessMatch

./: .gitignore  CMakeLists.txt  ChessFigures.qrc  README.md  bishop.h  board.cpp  board.h  boardcell.cpp  chessfigure.h  emptyfigure.cpp  king.cpp  king.h  knight.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pawn.h  queen.cpp  takenfiguresmanager.cpp  takenfiguresmanager.h
Client/: Audio.qrc  CMakeLists.txt  audiomanager.cpp  audiomanager.h  bishop.cpp  bishop.h  board.cpp  board.h  boardcell.h  chessfigure.cpp  chessfigure.h  client.cpp  client.h  emptyfigure.h  king.cpp  knight.cpp  knight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  pawn.cpp  queen.cpp  queen.h  ratingproxymodel.cpp  ratingproxymodel.h  resources.qrc  rook.cpp  rook.h  takenfiguresmanager.cpp  takenfiguresmanager.h  threadsafequeue.h  waitingwidget.cpp  waitingwidget.h
Server/: .SqlService.h.swp  Bishop.cpp  Bishop.h  CMakeLists.txt  ChessFigure.cpp  ChessFigure.h  ClientConnection.cpp  ClientConnection.h  ConnectionsVector.cpp  ConnectionsVector.h  Game.cpp  Game.h  GameIDs.cpp  GameIDs.h  GameMessage.cpp  GameMessage.h  GameResult.h  GamesManager.cpp  GamesManager.h  King.cpp  King.h  Knight.cpp  Knight.h  Message.cpp  Message.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Server.cpp  Server.h  SetupFile.sql  SqlService.cpp  SqlService.h  ThreadSafeClientsQueue.cpp  ThreadSafeClientsQueue.h  ThreadSafeGameMessagesQueue.cpp  ThreadSafeGameMessagesQueue.h  (+8 more)
Server/Tests/: CMakeLists.txt  EmptyBoardMovesFixture.cpp  EmptyBoardMovesFixture.h  EmptyBoardMovesFixtureTests.cpp  FirstMoveFixture.cpp  FirstMoveFixture.h  FirstMoveFixtureTests.cpp  GameFixture.cpp  GameFixture.h  GameFixtureTests.cpp  main.cpp
UML diagrams/: Server.drawio
